packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_for__selector_pattern3.snap
---
source: tests/vapor/v_for.rs
expression: code
---
import { createFor as _createFor, renderEffect as _renderEffect, setClass as _setClass, template as _template } from "vue";
const t0 = _template("<tr></tr>");
(() => {
  const n0 = _createFor(() => rows, (_for_item0) => {
    const n2 = t0();
    _renderEffect(() => _setClass(n2, _for_item0.value.label === _for_item0.value.id ? "danger" : ""));
    return n2;
  }, (row) => row.id);
  return n0;
})();
